--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -2,21 +2,31 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_nav_graph">
+    android:id="@+id/main_nav_graph"
+    app:startDestination="@id/loginFragment">
 
     <fragment
-        android:id="@+id/nav_login"
-        android:name="com.dam.t08p01.vista.fragmentos.LoginFragment"
-        android:label="@string/menu_Login"
+        android:id="@+id/loginFragment"
+        android:name="com.vag.vista.fragmentos.LoginFragment"
+        android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_nav_login_to_mainActivity"
-            app:destination="@id/mainActivity" />
+            android:id="@+id/action_loginFragment_to_fragment_sala"
+            app:destination="@id/fragment_sala" />
     </fragment>
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.vag.vista.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" />
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.vag.vista.fragmentos.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" />
+    <fragment
+        android:id="@+id/fragment_sala"
+        android:name="com.vag.vista.fragmentos.fragment_sala"
+        android:label="fragment_sala"
+        tools:layout="@layout/fragment_sala" >
+        <action
+            android:id="@+id/action_fragment_sala_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
 
 </navigation>
